--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
     "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
     "typescript": "^4.6.2",
-    "axios":"^1.6.1"
+    "axios": "1.6.0"
   },
   "lint-staged": {
     "*.ts": "yarn run lint:fix"
   },
   "dependencies": {
     "@ethereumjs/tx": "^3.5.0",
-    "@ledgerhq/hw-app-eth": "^6.34.9",
+    "@ledgerhq/hw-app-eth": "6.26.1",
     "@metamask/eth-sig-util": "^7.0.0",
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5"
   },
   "resolutions": {
-    "axios": "^1.6.1"
+    "axios": "1.6.0"
   }
 }
