--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@ledgerhq/evm-tools": "^1.0.16",
-    "@types/jest": "^27.4.1",
+    "@ledgerhq/hw-transport": "^6.30.4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "axios": "1.6.7",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.3",
-    "jest": "^27.5.1",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
-    "prettier": "^2.6.0",
+    "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^4.6.2"
+    "typescript": "^5.2.0",
+    "axios": "1.6.7"
   },
   "lint-staged": {
     "*.ts": "yarn run lint:fix"
@@ -50,8 +50,5 @@
     "@metamask/eth-sig-util": "^7.0.1",
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5"
-  },
-  "resolutions": {
-    "axios": "1.6.7"
   }
 }
